# mosyle

./: .gitignore  LICENSE.md  Pipfile  README.md  authors.md  license.md  pyproject.toml  readme.md  requirements.txt  settings_example.json  setup.cfg  setup.py
Postman Collections/: Mosyle_Manager.json
api/: __init__.py  authorization.py
docs/: README.md  packaging.md  packaging_publishing.md  readme.md
mosyle/: __init__.py  accounts.py  actions.py  cisco_ise.py  classes.py  defaults.py  devices.py  users.py
mosyle/accounts/: __init__.py
mosyle/actions/: __init__.py
mosyle/api/: cisco_ise_operation.py  class_column.py  class_operation.py  class_platform.py  device_column.py  device_lost_mode_operation.py  user_column.py  user_operation_type.py
mosyle/classes/: __init__.py
mosyle/devices/: __init__.py  attributes.py  platforms.py
mosyle/users/: __init__.py
settings/: __init__.py
src/mosyle/: __init__.py  __main__.py  __version__.py  account.py  accounts.py  action.py  actions.py  api.py  api_client.py  app.py  cisco_ise.py  classes.py  cli.py  click_order_commands.py  config.py  device.py  devices.py  section.py  str_enum.py  user.py  users.py
src/mosyle/actions/: __init__.py  api.py  cli.py
src/mosyle/api/: __init__.py  account_operation.py  cisco_ise_operation.py  class_column.py  class_operation.py  class_platform.py  device_column.py  device_lost_mode_operation.py  device_operation.py  device_platform.py  endpoint.py  list_users.py  user_column.py  user_list_type.py  user_operation.py  (+1 more)
tests/: manual.py  test_api.py  test_devices.py
(+16 files in other folders)
