[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel>=0.31.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mosyle"
authors = [
    {name = "Nathan McGuire", email = "mcguiren@osageschools.org" } 
]
#maintainers = [
#    {name = "Nathan McGuire", email = "mcguiren@osageschools.org" }
#]
description = "Mosyle Manager Python API"
requires-python = ">=3.7"
keywords = ["python", "api", "apple", "mdm", "mosyle"]
#license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]

dynamic = ["version"]

[project.readme]
file = "readme.md"
content-type = "text/markdown"

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage"]

[project.scripts]
mosyle = "mosyle.__main__:cli"

[project.urls]
"Github" = "https://github.com/SchoolOfTheOsage/mosyle"
"Bug Reports" = "https://github.com/SchoolOfTheOsage/mosyle/issues"
"Source" = "https://github.com/SchoolOfTheOsage/mosyle"

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools_scm]
write_to = "src/mosyle/__version__.py"

[tool.distutils.bdist_wheel]
universal = true
